--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,10 @@
 <h1>New To Angular</h1>
 <app-login></app-login>
+<!--<login></login>>
+
+<h1>New To Angular 2</h1>
+<app-login></app-login>
+<app-sign-up></app-sign-up>
+<app-profile></app-profile>-->
+
+<button (click)="onClick()">Click Me!</button>
