--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,14 @@
-<h1>New To Angular</h1>
+<!--<h1>New To Angular</h1>
 <app-login></app-login>
-<!--<login></login>>
+<login></login>>
 
 <h1>New To Angular 2</h1>
 <app-login></app-login>
 <app-sign-up></app-sign-up>
-<app-profile></app-profile>-->
+<app-profile></app-profile>
 
 <button (click)="onClick()">Click Me!</button>
+<button (click)="sum(10,20)">Sum!</button> -->
+
+<h1>CounterApp</h1>
+<app-counter-app></app-counter-app>
