--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,9 @@
 <app-profile></app-profile>
 
 <button (click)="onClick()">Click Me!</button>
-<button (click)="sum(10,20)">Sum!</button> -->
+<button (click)="sum(10,20)">Sum!</button> 
 
 <h1>CounterApp</h1>
-<app-counter-app></app-counter-app>
+<app-counter-app></app-counter-app>-->
+
+<app-event-app></app-event-app>
