--- a/src/app/app.html
+++ b/src/app/app.html
@@ -29,6 +29,7 @@
 <h1>Email:{{email}}</h1>
 <input type="text" [value]="email" placeholder="Enter email" #emailField>
 <button (click)="getEmail(emailField.value)">Get Email</button>
-<button (click)="setEmail()" >Set Email</button> -->
+<button (click)="setEmail()" >Set Email</button> 
 
-<app-if-else></app-if-else>
+<app-if-else></app-if-else> -->
+<app-for-loop></app-for-loop>
