--- a/src/app/app.html
+++ b/src/app/app.html
@@ -31,5 +31,6 @@
 <button (click)="getEmail(emailField.value)">Get Email</button>
 <button (click)="setEmail()" >Set Email</button> 
 
-<app-if-else></app-if-else> -->
-<app-for-loop></app-for-loop>
+<app-if-else></app-if-else>
+<app-for-loop></app-for-loop> -->
+<app-signal></app-signal>
