--- a/src/app/app.html
+++ b/src/app/app.html
@@ -32,5 +32,7 @@
 <button (click)="setEmail()" >Set Email</button> 
 
 <app-if-else></app-if-else>
-<app-for-loop></app-for-loop> -->
-<app-signal></app-signal>
+<app-for-loop></app-for-loop> 
+<app-signal></app-signal>-->
+
+<app-computed-signal></app-computed-signal>
