--- a/src/app/app.html
+++ b/src/app/app.html
@@ -34,6 +34,8 @@
 <app-if-else></app-if-else>
 <app-for-loop></app-for-loop> 
 <app-signal></app-signal>
-<app-computed-signal></app-computed-signal> -->
+<app-computed-signal></app-computed-signal> 
 
-<app-cnt-var></app-cnt-var>
+<app-cnt-var></app-cnt-var>-->
+
+<app-use-effect></app-use-effect>
