--- a/src/app/app.html
+++ b/src/app/app.html
@@ -36,6 +36,8 @@
 <app-signal></app-signal>
 <app-computed-signal></app-computed-signal> 
 
-<app-cnt-var></app-cnt-var>-->
+<app-cnt-var></app-cnt-var>
 
-<app-use-effect></app-use-effect>
+<app-use-effect></app-use-effect>-->
+
+<app-todo></app-todo>
