--- a/src/app/app.html
+++ b/src/app/app.html
@@ -38,6 +38,8 @@
 
 <app-cnt-var></app-cnt-var>
 
-<app-use-effect></app-use-effect>-->
+<app-use-effect></app-use-effect>
 
-<app-todo></app-todo>
+<app-todo></app-todo>-->
+
+<app-dynamicstyle></app-dynamicstyle>
