--- a/src/app/app.html
+++ b/src/app/app.html
@@ -40,6 +40,7 @@
 
 <app-use-effect></app-use-effect>
 
-<app-todo></app-todo>-->
+<app-todo></app-todo>
 
-<app-dynamicstyle></app-dynamicstyle>
+<app-dynamicstyle></app-dynamicstyle>-->
+<app-direct></app-direct>
